[project]
name = "mcstatus"
dynamic = ["version"]
license = "Apache-2.0"
description = "A library to query Minecraft Servers for their status and capabilities."
readme = "README.md"
authors = [
  { name = "Nathan Adams", email = "dinnerbone@dinnerbone.com" },
  { name = "ItsDrike", email = "itsdrike@protonmail.com" },
  { name = "PerchunPak", email = "perchunpak@gmail.com" },
]
maintainers = [
  { name = "Kevin Tindall", email = "kevinkjt2000@gmail.com" },
  { name = "ItsDrike", email = "itsdrike@protonmail.com" },
  { name = "PerchunPak", email = "perchunpak@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]
keywords = ["minecraft", "protocol"]
requires-python = ">=3.10"
dependencies = [
    "asyncio-dgram>=2.1.2",
    "dnspython>=2.4.2",
]

[project.urls]
Documentation = "https://mcstatus.readthedocs.io"
"Source code" = "https://github.com/py-mine/mcstatus"

[tool.uv]
default-groups = ["dev", "lint", "test", "docs"]

[dependency-groups]
dev = ["poethepoet~=0.41.0"]
lint = [
  "pre-commit~=4.5.1",
  "ruff~=0.15.0",
  "pyright==1.1.408",
  "typing-extensions~=4.15.0",
]
test = [
  "pytest~=9.0.2",
  "pytest-asyncio~=1.3.0",
  "pytest-cov~=7.0.0",
  "pytest-rerunfailures~=16.1",
  "coverage~=7.13.1",
  "typing-extensions~=4.15.0",
]
docs = ["docs; python_version >= '3.12'"]
release = [
  "hatchling~=1.28.0",
  "uv-dynamic-versioning~=0.13.0",
]

[tool.poe.tasks]
_lint_ruff = "ruff check ."
_lint_pyright = "pyright ."

[tool.poe.tasks.build]
cmd = "uv build"
help = "Builds the whl and tar.gz distributions"

[tool.poe.tasks.docs]
cmd = "make -C docs/ html"
help = "Generates documentation locally in html format"

[tool.poe.tasks.format]
cmd = "ruff format"
help = "Runs automatic formatting tools"

[tool.poe.tasks.lint]
sequence = ["_lint_pyright", "_lint_ruff"]
help = "Runs linter tools"

[tool.poe.tasks.pre-commit]
cmd = "pre-commit run --all-files"
help = "Executes commit hook checks on all files"

[tool.poe.tasks.release]
cmd = "uv publish"
deps = ["pre-commit", "test", "build"]
help = "Requires all the checks to pass before building and publishing"

[tool.poe.tasks.test]
cmd = "pytest"
help = "Runs the unit tests"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --doctest-modules --cov=mcstatus --cov-append --cov-branch --cov-report=term-missing -vvv --no-cov-on-fail --asyncio-mode=strict"
testpaths = ["tests"]

# Remove deprecation warning
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.10"
typeCheckingMode = "standard"

disableBytesTypePromotions = false
enableTypeIgnoreComments = false
reportUnnecessaryTypeIgnoreComment = true

[tool.ruff]
target-version = "py310"
line-length = 127

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "EM",      # Very weird rules for using exceptions
  "FIX",     # Line contains TODO, consider resolving the issue
  "ANN204",  # Missing return type annotation for special method
  "B904",    # Exception raised within try-except should use raise ... from exc
  "COM812",  # Missing trailing comma (in multiline lists/tuples/...)
  "D203",    # Blank line required before class docstring
  "D213",    # Multi-line docstring summary should start at the second line
  "PLR2004", # Magic value used in comparison
  "RET504",  # Unnecessary assignment to a variable before `return` statement
  "S101",    # Use of `assert` detected
  "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
  "TD002",   # Missing author in TODO
  "TD003",   # Missing issue link for this TODO
  "TRY003",  # Avoid specifying long messages outside the exception class
  "ISC002",  # Multi line implicit string concatenation

  # Ruff often identifies private modules as public, because we don't prefix them with `_`
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D106", # Missing docstring in public nested class
  "D107", # Missing docstring in __init__
  "D413", # Missing blank line after last section
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN",    # flake8-annotations
  "ARG001", # Unused function argument
  "ARG002", # Unused method argument
  "FBT001", # Boolean-typed positional argument in function definition
  "SLF001", # Private member accessed
  "T201",   # Usage of `print`
]
"docs/**" = [
  "INP001", # Implicit namespace package
]
"docs/examples/code/**" = [
  "FA",     # flake8-future-annotations
  "BLE001", # Do not catch blind exception: `Exception`
  "T201",   # Usage of `print`
  "TC001",  # Move application import into a type-checking block
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
banned-module-level-imports = ["typing_extensions"]

[tool.ruff.lint.isort]
order-by-type = false
case-sensitive = true
combine-as-imports = true

# Redundant rules with ruff-format
force-single-line = false       # forces all imports to appear on their own line
force-wrap-aliases = false      # Split imports with multiple members and at least one alias
lines-after-imports = -1        # The number of blank lines to place after imports
lines-between-types = 0         # Number of lines to place between "direct" and import from imports
split-on-trailing-comma = false # if last member of multiline import has a comma, don't fold it to single line

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = false

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.flake8-builtins]
ignorelist = ["id", "copyright"]

[tool.ruff-formatter]
line-ending = "lf"

[project.scripts]
mcstatus = "mcstatus.__main__:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv.sources]
docs = { path = "docs" }

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
metadata = false
fallback-version = "0.0.0"
