[project]
name = "docs"
version = "0.0.0"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
  "sphinx~=9.1.0",
  "sphinx-autodoc-typehints~=3.6.2",
  "furo>=2025.7.19",
  "m2r2~=0.3.4",
  "packaging~=26.0",
  "uv-dynamic-versioning~=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
